--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
             <div class="content">
                 <h2 style="margin-bottom: 0.25rem;">How Much Better Are We?</h2>
                 <p class="slide-intro" style="margin-bottom: 0.75rem; color: var(--text-secondary); font-size: 0.95rem;">
-                    <strong>Baseline = Simple patterns</strong> (basic regex). <strong>Our approach = Enhanced patterns</strong> with careful design.
+                    <strong>Baseline:</strong> Simple regex (naive patterns, no filtering). <strong>Our System:</strong> Enhanced regex with false-positive filtering, edge case handling, and validation algorithms.
                 </p>
                 
                 <div style="background: #f0fdf4; padding: 0.75rem; border-radius: 8px; margin-bottom: 0.75rem; border-left: 4px solid #059669;">
