--- a/index.html
+++ b/index.html
@@ -216,10 +216,10 @@
                     </div>
                     <div class="pattern-card">
                         <h3>Address</h3>
-                        <span class="pattern-f1 f1-perfect">F1: 1.000 (Perfect!)</span>
+                        <span class="pattern-f1 f1-good">F1: 0.95 (Excellent)</span>
                         <div class="pattern-example">123 Main Street</div>
                         <p style="font-size: 0.9rem; color: var(--text-secondary); margin-top: 0.5rem;">
-                            Street addresses follow predictable patterns
+                            Street addresses follow predictable patterns, but some variations exist
                         </p>
                     </div>
                     <div class="pattern-card">
@@ -292,7 +292,7 @@
                             <div style="background: #d1fae5; height: 7px; border-radius: 3px; overflow: hidden; margin-bottom: 0.3rem;">
                                 <div style="background: #059669; height: 100%; width: 100%;"></div>
                             </div>
-                            <p style="font-size: 0.8rem; color: #64748b;">3 types perfect</p>
+                            <p style="font-size: 0.8rem; color: #64748b;">2 types perfect</p>
                         </div>
                     </div>
                 </div>
@@ -312,14 +312,14 @@
                             </div>
                             <div style="flex: 0 0 75px; text-align: right; font-weight: 600; color: #059669; font-size: 0.95rem;">Perfect!</div>
                         </div>
-                        <div style="display: flex; align-items: center; gap: 0.85rem; margin-bottom: 0.6rem; padding: 0.6rem; background: rgba(5, 150, 105, 0.1); border-radius: 6px;">
+                        <div style="display: flex; align-items: center; gap: 0.85rem; margin-bottom: 0.6rem; padding: 0.6rem; background: rgba(37, 99, 235, 0.1); border-radius: 6px;">
                             <div style="flex: 0 0 110px; font-weight: 600; font-size: 1rem;">Address</div>
                             <div style="flex: 1; position: relative;">
-                                <div style="background: #d1fae5; height: 22px; border-radius: 4px; overflow: hidden; position: relative;">
-                                    <div style="background: #059669; height: 100%; width: 100%; display: flex; align-items: center; justify-content: center; color: white; font-weight: 600; font-size: 0.85rem;">100% Perfect</div>
+                                <div style="background: #dbeafe; height: 22px; border-radius: 4px; overflow: hidden; position: relative;">
+                                    <div style="background: #2563eb; height: 100%; width: 95%; display: flex; align-items: center; justify-content: center; color: white; font-weight: 600; font-size: 0.85rem;">95%</div>
                                 </div>
                             </div>
-                            <div style="flex: 0 0 75px; text-align: right; font-weight: 600; color: #059669; font-size: 0.95rem;">Perfect!</div>
+                            <div style="flex: 0 0 75px; text-align: right; font-weight: 600; color: #2563eb; font-size: 0.95rem;">Excellent</div>
                         </div>
                         <div style="display: flex; align-items: center; gap: 0.85rem; margin-bottom: 0.6rem; padding: 0.6rem; background: rgba(5, 150, 105, 0.1); border-radius: 6px;">
                             <div style="flex: 0 0 110px; font-weight: 600; font-size: 1rem;">SSN</div>
@@ -356,7 +356,7 @@
                 </div>
 
                 <p style="margin-top: 1.1rem; font-size: 0.9rem; color: var(--text-secondary); text-align: center; padding: 0.85rem; background: #fef3c7; border-radius: 6px;">
-                    <strong>Key Takeaway:</strong> Emails, addresses, and SSN are detected perfectly (100%). Names and phones work well (68-72%).
+                    <strong>Key Takeaway:</strong> Emails and SSN are detected perfectly (100%). Addresses work excellently (95%). Names and phones work well (68-72%).
                 </p>
             </div>
         </section>
@@ -433,15 +433,15 @@
                                 </div>
                                 <div style="font-size: 0.7rem; color: #991b1b;">Cannot detect at all</div>
                             </div>
-                            <div style="padding: 0.6rem; background: #d1fae5; border-radius: 6px;">
-                                <div style="font-size: 0.8rem; color: #065f46; margin-bottom: 0.3rem;"><strong>Our System (Enhanced)</strong></div>
-                                <div style="background: #a7f3d0; height: 20px; border-radius: 4px; overflow: hidden; position: relative; margin-bottom: 0.3rem;">
-                                    <div style="background: #059669; height: 100%; width: 100%; display: flex; align-items: center; justify-content: center; color: white; font-weight: 600; font-size: 0.75rem;">100%</div>
+                            <div style="padding: 0.6rem; background: #dbeafe; border-radius: 6px;">
+                                <div style="font-size: 0.8rem; color: #1e3a8a; margin-bottom: 0.3rem;"><strong>Our System (Enhanced)</strong></div>
+                                <div style="background: #bfdbfe; height: 20px; border-radius: 4px; overflow: hidden; position: relative; margin-bottom: 0.3rem;">
+                                    <div style="background: #2563eb; height: 100%; width: 95%; display: flex; align-items: center; justify-content: center; color: white; font-weight: 600; font-size: 0.75rem;">95%</div>
                                 </div>
-                                <div style="font-size: 0.7rem; color: #065f46;">Finds all perfectly</div>
+                                <div style="font-size: 0.7rem; color: #1e3a8a;">Finds 95 of 100</div>
                             </div>
                         </div>
-                        <div style="text-align: center; margin-top: 0.3rem; font-weight: 600; color: #059669; font-size: 0.9rem;">New Capability!</div>
+                        <div style="text-align: center; margin-top: 0.3rem; font-weight: 600; color: #2563eb; font-size: 0.9rem;">New Capability!</div>
                     </div>
                 </div>
 
